--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Upload files to generate URL for them." />
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+    <link rel="stylesheet" href="style.css">
     <title>File To URL</title>
   </head>
-  <body>
+  <body class='main-body'>
     <p>Hello World</p>
   </body>
 
